--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -15,7 +15,7 @@
                 <li><a href="#groups">K-pop Groups</a></li>
                 <li><a href="#albums">Albums</a></li>
                 <li><a href="#news">News</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#dancetraining">Contact</a></li>
             </ul>
         </nav>
     </header>
