--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,7 +3,6 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: url('JPS homepage bk.jpg') no-repeat center center/cover;
 }
 
 a {
@@ -15,15 +14,9 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
-    background-color: #c003a3;
+    padding: 10px;
+    background-color: #ff76f8;
     color: white;
-}
-
-header .logo img {
-    width: 100px;
-    height: 110px;
-    border-radius: 80%;
 }
 
 nav ul {
@@ -35,21 +28,29 @@ nav ul {
 
 nav ul li {
     margin-right: 20px;
+    width:100px;
+    height:50px;
+    float:left;
+    font-size:20px;
+   
 }
 
 nav ul li a {
     color: white;
-    font-size: 18px;
+    font-size: 25px;
 }
 
 nav ul li a:hover {
-    color: #ff9ced;
+    color: #ec2cc8;
 }
 
-#hero {
+nav ul li{
+    border-right:2px soild #0000;
+}
+/* #hero {
     text-align: center;
     padding: 80px 20px;
-    background: url('JPS homepage bk.jpg') no-repeat center center/cover;
+    background: url('homepagebg.jpg') no-repeat center/cover;
     color: white;
 }
 
@@ -73,11 +74,11 @@ nav ul li a:hover {
 
 #hero .btn-primary:hover {
     background-color: #e6b800;
-}
+} */
 
 #about {
-    padding: 60px 20px;
-    background-color: white;
+    padding: 10px 20px;
+    background-color: rgb(249, 144, 221);
     text-align: center;
 }
 
@@ -142,6 +143,6 @@ nav ul li a:hover {
 footer {
     text-align: center;
     padding: 20px;
-    background-color: #333;
+    background-color: #ce39f7;
     color: white;
 }
