--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,37 +2,96 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
     color: #333;
+
+    background-image: url('../images/landing.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
-h1, h2, h3 {
-    color: #222;
+.backgroundlogo img {
+    width: 100px;
+    height: auto;
+    border-radius: 100%;
+    object-fit: cover;
+    margin: 10px;
 }
 
-a {
-    text-decoration: none;
-    color: #e032f0;
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: #ff76f8;
 }
 
-a:hover {
-    color: #45a049;
-}
-
-ul {
-    list-style-type: none;
+nav ul {
+    list-style: none;
+    font-size: 16px;
+    margin: 0;
     padding: 0;
+    display: flex;
+    gap: 20px;
 }
 
-li {
-    display: inline;
-    margin-right: 20px;
-
-
+nav ul li a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    transition: color 0.3s ease;
 }
-.logo img {
-    width: 200px; 
-    height: 120px; 
-    border-radius: 50%; 
-    object-fit: cover; 
- }
+
+nav ul li a:hover {
+    color: #ff4081; /* nice pink hover color */
+}
+ #hero {
+    text-align: center;
+    color: white;   
+   
+}
+
+#hero h1 {
+    font-size: 4rem;
+    padding-bottom:10px;
+}
+
+#hero p {
+    font-size: 2rem;
+    padding-bottom: 20px;
+}
+
+#hero .btn-primary {
+    background-color: #ffcc00;
+    padding: 20px 40px;
+    font-size: 2rem;
+    color: #333;
+    border-radius: 30px;
+    margin:20px;
+    transition: background-color 0.3s;
+}
+
+#hero .btn-primary:hover {
+    background-color: #d924be;
+} 
+
+/* About section */
+#about {
+    padding: 70px 10px;
+    background-color: rgba(236, 130, 245, 0.85);
+    margin: 40px;
+    border-radius: 10px;
+}
+
+#about h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#about p {
+    max-width: 800px;
+    margin: 0 auto;
+    line-height: 1.6;
+    font-size: 1.5em;
+}
