--- a/public/views/HomePage.ejs
+++ b/public/views/HomePage.ejs
@@ -1,34 +1,17 @@
 <!DOCTYPE html>
 <head>
     <title>Home Page</title>
-</head>
-<body>
-    
-    <header>
-        <div class="logo">
-            <img src="../images/JPS's logo.jpg" alt="တစ်ခုခု" />
-        </div>
-    </header>
-    
-    <main>
-        <section id="hero">
-            <h1>Welcome to the Jue's PopStep!</h1>
-            <p>Watch and learn of K-pop groups, about each members and dance.</p>
-            <a href="#groups" class="btn-primary">Discover More</a>
-        </section>
-        
-        <section id="about">
-            <h2>About Us</h2>
-            <p>We are dedicated to bringing you all the news, albums, and updates on the K-pop industry!</p>
-        </section>
+    <%- include('partials/head') %>
 
+</head>
+<body>  
         <section id="featured">
             <h2>Featured Groups</h2>
             <div class="featured-groups">
                 <div class="group-card">
                     <img src="path-to-image" alt="Group 1">
-                    <h3>Group Name 1</h3>
-                    <p>Brief description about the group.</p>
+                    <h3>Black Pink</h3>
+                    <p>Click to see all!</p>
                 </div>
                 <div class="group-card">
                     <img src="path-to-image" alt="Group 2">
