--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <title>Welcome Page</title>
     <%- include('partials/head') %>
 </head>
 <body>
-    
     <header>
-        <div class="logo">
-            <img src="../images/JPS's logo.jpg" alt="တစ်ခုခု" />
+        <div class="backgroundlogo">
+            <img src="../images/Main logo.jpg" alt="Main Logo" />
         </div>
         <nav>
             <ul>
@@ -19,3 +19,21 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <section id="hero">
+            <h1>Welcome to the Jue's PopStep!</h1>
+            <p>Watch and learn about K-pop groups, each member, and dance.</p>
+            <a href="/home" class="btn-primary">Discover More</a>
+        </section>
+
+        <section id="about">
+            <h2>About Us</h2>
+            <p>We are dedicated to bringing you all the news, albums, and updates on the K-pop industry!</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 K-pop World. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
