--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,6 @@ body {
     margin: 0;
     padding: 0;
     color: #333;
-
     background-image: url('../images/landing.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -94,4 +93,12 @@ nav ul li a:hover {
     margin: 0 auto;
     line-height: 1.6;
     font-size: 1.5em;
+}
+
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #ce39f7;
+    color: white;
+    padding-bottom: 10px;
 }
