--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <title>Welcome Page</title>
+    <title>Jur's PopStep</title>
     <%- include('partials/head') %>
 </head>
 <body>
@@ -11,11 +10,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#groups">K-pop Groups</a></li>
-                <li><a href="#albums">Albums</a></li>
-                <li><a href="#news">News</a></li>
-                <li><a href="#dancetraining">Contact</a></li>
+                <li><a href="/home">Home</a></li>
+                <li><a href="/groups">K-pop Groups</a></li>
+                <li><a href="/albums">Albums</a></li>
+                <li><a href="/news">News</a></li>
+                <li><a href="/dancetraining">Contact</a></li>
             </ul>
         </nav>
     </header>
