--- a/public/views/partials/head.ejs
+++ b/public/views/partials/head.ejs
@@ -1,6 +1,8 @@
 <meta charset="UTF-8">
     <html lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jue's PopStep</title>
+    <link rel="icon" type="images/icon" href="images/Jue's_PopStep.ico">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../../css/style.css">
 
@@ -8,3 +10,8 @@
     <html lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/home.css">
+
+    <meta charset="UTF-8">
+    <html lang="en">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../css/k-popGP.css">
