--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,8 +1,14 @@
-body {
+.homepg {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    
     box-sizing: border-box;
+    background-image:url('../images/homepagebg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 a {
@@ -93,30 +99,48 @@ nav ul li{
 }
 
 #featured {
+  width:fit-content;
     padding: 60px 20px;
-    background-color: #f9f9f9;
+     align-items: center;
+    color: rgb(255, 173, 255);
+    justify-content:center;
+    position: relative;
+    left: 10px;
+    top: 10px;
 }
 
 #featured h2 {
     text-align: center;
     font-size: 2rem;
+    padding: 20px;
+    width:fit-content;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin:20px 775px 20px 775px;
+    background-color: rgb(255, 14, 154);
+    border-radius: 20px;
 }
 
 .featured-groups {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+
+    /* flex-wrap: wrap; */
+    display:flex;
+    margin:20px 80px;
+    align-items:center;
+
 }
 
 .group-card {
-    background-color: white;
-    padding: 20px;
-    margin: 10px;
-    width: 250px;
+   
+    margin: 30px;
+    width: 500px;
+    height:400px;
     text-align: center;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
+    display:flexbox;
 }
 
 .group-card:hover {
@@ -124,8 +148,8 @@ nav ul li{
 }
 
 .group-card img {
-    width: 100%;
-    height: 150px;
+    width: 400px;
+    height: 300px;
     object-fit: cover;
     border-radius: 8px;
 }
@@ -137,7 +161,7 @@ nav ul li{
 
 .group-card p {
     font-size: 1rem;
-    color: #555;
+    color: #ff00c8;
 }
 
 footer {
@@ -145,4 +169,5 @@ footer {
     padding: 20px;
     background-color: #ce39f7;
     color: white;
+    padding-bottom: 10px;
 }
