--- a/public/views/partials/head.ejs
+++ b/public/views/partials/head.ejs
@@ -15,3 +15,9 @@
     <html lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/k-popGP.css">
+
+<meta charset="UTF-8">
+    <html lang="en">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../css/search.css">
+
